# colman

./: .gitignore  README.md  foo.txt  log.txt  pixi.toml  setup.md  yolo-demo.py
src/models/1.5inchaprilcube/: model.sdf
src/models/1.5inchwoodcube/: model.sdf
src/models/2inchaprilcube/: model.sdf
src/models/2inchwoodcube/: model.sdf
src/models/calibrationtag/: model.sdf
src/models/table/: model.sdf
src/oakd_description/: package.xml  setup.py
src/oakd_gazebo/: package.xml  setup.py
src/pick_n_place/: CMakeLists.txt  object_load_cmd.txt  package.xml
src/pick_n_place/launch/: pick_n_place_demo.launch.py
src/pick_n_place/models/: box.sdf
src/pick_n_place/src/: mtc_node.cpp
src/ros_robotiq_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ros_robotiq_description/ros_robotiq_description/: detection.py  disparity_to_depth.py  stereo_camera_info_republisher.py
src/ros_robotiq_description/ros_robotiq_description/config/: apriltag.yaml  ur3e_robotiq_controllers.yaml
src/ros_robotiq_description/ros_robotiq_description/launch/: apriltag.launch.py  display.launch.py  ur3e_YOLO.launch.py  ur3e_bringup.launch.py  ur3e_depth.launch.py  ur3e_robotiq_bringup.launch.py  ur3e_robotiq_gz_bringup.launch.py  ur3e_sim.launch.py  ur3e_sim_moveit_bringup.launch.py
src/ros_robotiq_description/ros_robotiq_description/rviz/: display_config.rviz
src/ros_robotiq_description/ros_robotiq_description/urdf/: moveit_urdf.urdf  ur3e.urdf  ur3e_robotiq.urdf.xacro
src/ros_robotiq_description/ros_robotiq_description/worlds/: calibration_world.sdf  empty_bullet.sdf  table_camera_world.sdf  table_world.sdf
src/ur3e_moveit_config/: .setup_assistant  package.xml
src/ur3e_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ur3_robotiq.ros2_control.xacro  ur3_robotiq.srdf  ur3_robotiq.urdf.xacro
src/ur3e_moveit_config/launch/: demo.launch.py  (+8 more)
(+4 files in other folders)
